# surakarta-network

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
include/: surakarta_agent_remote.h  surakarta_network.h  surakarta_network_service.h
src/: client.cpp  message.cpp  reverse_proxy.cpp  reverse_proxy_service.cpp  server.cpp  socket_log_wrapper.cpp  surakarta_agent_remote.cpp  surakarta_network_service.cpp  test.cpp
src/private-include/: exception.h  exception_as_eof_wrapper.h  message.h  opcode.h  play.h  reverse_proxy_service.h  socket_log_wrapper.h  socket_raw_log_wrapper.h
submission/: Client_Team_3.cpp  Server_Team_3.cpp
submission/private-include/: manual_record_socket_wrapper.h  reverse_proxy_service.h  socket_raw_log_wrapper.h
